TPS-8: Polish and more